// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JiraMonkey should be possible to show and hide the different jira monkeys as well as the whole monkey selection: initial state 1`] = `
<div>
  <div>
    <input
      id="JiraMonkeyToggle"
      title="Jira Monkeys"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`JiraMonkey should be possible to show and hide the different jira monkeys as well as the whole monkey selection: on activated toolbar 1`] = `
<div>
  <div>
    <input
      id="JiraMonkeyToggle"
      title="Jira Monkeys"
      type="checkbox"
    />
    <header
      id="JiraMonkeyContainer"
    >
      <div
        class="monkeyToggler"
      >
        <button>
          Worklog-summarizer
        </button>
        <button>
          Estimation-shifter
        </button>
        <button>
          Booking-shifter
        </button>
        <button>
          Estimation-fixer
        </button>
      </div>
      <main />
    </header>
  </div>
</div>
`;

exports[`JiraMonkey should be possible to show and hide the different jira monkeys as well as the whole monkey selection: on activated toolbar with booking shifter 1`] = `
<div>
  <div>
    <input
      id="JiraMonkeyToggle"
      title="Jira Monkeys"
      type="checkbox"
    />
    <header
      id="JiraMonkeyContainer"
    >
      <div
        class="monkeyToggler"
      >
        <button>
          Worklog-summarizer
        </button>
        <button>
          Estimation-shifter
        </button>
        <button>
          Booking-shifter
        </button>
        <button>
          Estimation-fixer
        </button>
      </div>
      <main>
        <div>
          BookingShiftViewMock
        </div>
      </main>
    </header>
  </div>
</div>
`;

exports[`JiraMonkey should be possible to show and hide the different jira monkeys as well as the whole monkey selection: on activated toolbar with estimation fixer 1`] = `
<div>
  <div>
    <input
      id="JiraMonkeyToggle"
      title="Jira Monkeys"
      type="checkbox"
    />
    <header
      id="JiraMonkeyContainer"
    >
      <div
        class="monkeyToggler"
      >
        <button>
          Worklog-summarizer
        </button>
        <button>
          Estimation-shifter
        </button>
        <button>
          Booking-shifter
        </button>
        <button>
          Estimation-fixer
        </button>
      </div>
      <main>
        <div>
          EstimationFixViewMock
        </div>
      </main>
    </header>
  </div>
</div>
`;

exports[`JiraMonkey should be possible to show and hide the different jira monkeys as well as the whole monkey selection: on activated toolbar with estimation shifter 1`] = `
<div>
  <div>
    <input
      id="JiraMonkeyToggle"
      title="Jira Monkeys"
      type="checkbox"
    />
    <header
      id="JiraMonkeyContainer"
    >
      <div
        class="monkeyToggler"
      >
        <button>
          Worklog-summarizer
        </button>
        <button>
          Estimation-shifter
        </button>
        <button>
          Booking-shifter
        </button>
        <button>
          Estimation-fixer
        </button>
      </div>
      <main>
        <div>
          EstimationShiftViewMock
        </div>
      </main>
    </header>
  </div>
</div>
`;

exports[`JiraMonkey should be possible to show and hide the different jira monkeys as well as the whole monkey selection: on activated toolbar with worklog summarizer 1`] = `
<div>
  <div>
    <input
      id="JiraMonkeyToggle"
      title="Jira Monkeys"
      type="checkbox"
    />
    <header
      id="JiraMonkeyContainer"
    >
      <div
        class="monkeyToggler"
      >
        <button>
          Worklog-summarizer
        </button>
        <button>
          Estimation-shifter
        </button>
        <button>
          Booking-shifter
        </button>
        <button>
          Estimation-fixer
        </button>
      </div>
      <main>
        <div>
          WorklogSummarizerViewMock
        </div>
      </main>
    </header>
  </div>
</div>
`;

exports[`JiraMonkey should be possible to show and hide the different jira monkeys as well as the whole monkey selection: on inactive toolbar 1`] = `
<div>
  <div>
    <input
      id="JiraMonkeyToggle"
      title="Jira Monkeys"
      type="checkbox"
    />
  </div>
</div>
`;
